tests/snapshots/run_wpt_conformance__litert_reduceMax_float16_3D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_max.https.any.js reduceMax float16 3D tensor options.axes, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceMaxInput: f16[2, 3, 4];
  }

  nodes {
    [reduceMaxOutput] = reduceMax(reduceMaxInput, axes=[2], keepDimensions=false, label="");
  }

  outputs { reduceMaxOutput; }
}
